--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: app
     restart: always
     ports:
-      - "6667:6667"
+      - ${APP_PORT}:6667
     networks:
       - default
     stdin_open: true
