--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,10 @@ services:
 
 networks:
   default:
+    name: docker_irssi_network
     driver: bridge
 
 volumes:
   data:
+    name: docker_irssi_data
     driver: local
